fix: style: changed overflow to overflow-y auto

--- a/order/app/styles/order/table-select.scss
+++ b/order/app/styles/order/table-select.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
 
   .table-mask{
-    overflow: scroll;
+    overflow-y: auto;
     max-height: 470px;
   }
 }
